runtime/pavex_macros/tests/config/fail/not_public.stderr
error: Configuration types must be public.
       Mark `A` as `pub`, and make sure it can be imported from outside your crate.
 --> tests/config/fail/not_public.rs:5:1
  |
5 | struct A;
  | ^^^^^^^^

error: Configuration types must be public.
       Mark `A1` as `pub`, and make sure it can be imported from outside your crate.
 --> tests/config/fail/not_public.rs:8:1
  |
8 | enum A1 {}
  | ^^^^^^^

error: Configuration types must be public.
       Mark `B` as `pub`, instead of `pub(crate)`, and make sure it can be imported from outside your crate.
  --> tests/config/fail/not_public.rs:11:1
   |
11 | pub(crate) struct B;
   | ^^^^^^^^^^

error: Configuration types must be public.
       Mark `B1` as `pub`, and make sure it can be imported from outside your crate.
  --> tests/config/fail/not_public.rs:14:1
   |
14 | enum B1 {}
   | ^^^^^^^

error: Configuration types must be public.
       Mark `use` as `pub`, and make sure it can be imported from outside your crate.
  --> tests/config/fail/not_public.rs:17:1
   |
17 | use sub::A as A2;
   | ^^^^^^^^^^^^^^^^

error: Configuration types must be public.
       Mark `use` as `pub`, instead of `pub(crate)`, and make sure it can be imported from outside your crate.
  --> tests/config/fail/not_public.rs:20:1
   |
20 | pub(crate) use sub::A as A3;
   | ^^^^^^^^^^
